TraySupervisedUser observe user add/switch

TraySupervisedUser should observe user session addition and
switch as well as the user session update. Otherwise, it might
miss some session info as in http://crbug.com/796758, where
user child info is now only set at user session creation with
no user session update followed.

Bug: 796758
Change-Id: Ic275ccfa174a21451077e6ec9225901f188e2a63
Reviewed-on: https://chromium-review.googlesource.com/848020
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527057}
Former-commit-id: b910d51d757bc376356d333812c0dc595f7a7beb